@@ -110,9 +110,9 @@ private:
   G4HadronicInteraction* fEmCascade;
   G4HadronicInteraction* fBoundDecay;
 
-  const G4int emcID;
-  const G4int ncID;
-  const G4int dioID;
+  G4int emcID;
+  G4int ncID;
+  G4int dioID;
 
   // This is shadowing "result" in the cc file and
   // looks to be unnecessary.  Removed by DHW, 12 June 2012   
