@@ -14,6 +14,18 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+26 January 2015 V. Ivantchenko  (hadr-stopping-V10-00-09)
+--------------------------------------------------------------------
+- G4HadronStoppingProcess, G4MuMinusCapturePrecompound,  
+  G4MuonMinusBoundDecay - cleanup comments
+
+08 December 2014 V. Ivantchenko
+--------------------------------------------------------------------
+- G4HadronStoppingProcess, G4MuonMinusBoundDecay: fixed time of muon 
+    nuclear capture secondaries (fix #1695); define index in the model 
+    cathalog inside PreparePhysicsTable() to avoid bad interference 
+    with EM physics
+
 30 August 2014 V. Ivantchenko  (hadr-stopping-V10-00-08)
 --------------------------------------------------------------------
 - removed obsolete G4MuonMinusCaptureAtRest, G4StopElementSelector,
